--- a/templates/index.html
+++ b/templates/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>Aer</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
     <div class="container mt-5">
         <!-- Title and Description -->
-        <h1 class="text-center text-primary">Weather App</h1>
+        <h1 class="text-center text-primary">Aer, the weather app</h1>
         <p class="text-center">{{ test_text }}</p> <!-- Dynamic text -->
 
         <!-- Authentication Links -->
