--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         {% endif %}
     </div>
 
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
 
 
     <!-- Bootstrap JS -->
